Adjusted CSS to fix Footer issue with bigger screen sizes, also fixed SVG Title text clipping issue on smaller screens, adjusted grid layout to fit better in smaller screen sizes too

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
-    font-size: 20px;
 }
 
 :root {
@@ -13,7 +12,7 @@
 
 /* Animation Area */
 @keyframes pop-in {
-    0% { opacity: 0; transform: translateY(-4rem) scale(.02);}
+    0% { opacity: 0; transform: translateY(-1rem) scale(.02);}
     100% { opacity: 1; transform: none;}
 }
 
@@ -90,7 +89,8 @@ svg {
 
 /* Body/JumboTron Styling */
 body {
-    height: 100%;
+    min-height: 100%;
+    font-size: 20px;
 }
 
 .iotd {
@@ -117,11 +117,10 @@ body {
 }
 
 .logo-image {
-    margin-top: 20px;
+    position: relative;
     float: left;
-    max-width: 5em;
+    max-width: 9%;
     animation-delay: 0.3s;
-    outline: none;
 }
 /* Body/JumboTron Styling End */
 
@@ -210,7 +209,7 @@ body {
 
 /* Footer Styling */
 footer {
-    position: absolute;
+    position: relative;
     width: 100%;
     bottom: 2%;
 }
@@ -284,7 +283,7 @@ footer {
 /* Media Query Adjustments 1200px*/
 @media screen and (max-width: 1200px) {
     footer {
-        position: absolute;
+        position: relative;
         width: 100%;
         bottom: 5px;
     }
@@ -299,12 +298,19 @@ footer {
     .hero {
         display: flex;
         text-align: center;
+        padding: 5%;
     }
 
     svg {
         display: flex;
+        transform: translateY(15px);
         width: 89%;
-        height: 30%;
+        height: 50%;
+    }
+
+    .space-text {
+        font-size: 1.13rem;
+        transform: translateY(5%);
     }
 
     .logo-image {
@@ -313,20 +319,20 @@ footer {
 
     .card-wrapping-0 {
         text-align: center;
-        margin-left: 25%;
-        width: 50%;
+        margin-left: 5%;
+        width: 90%;
     }
 
     .card-wrapping {
         text-align: center;
-        margin-left: 25%;
-        width: 50%;
+        margin-left: 5%;
+        width: 90%;
     }
     
     .card-wrapping-2 {
         text-align: center;
-        margin-left: 25%;
-        width: 50%;
+        margin-left: 5%;
+        width: 90%;
     }
 
     .info-container {
